@@ -25,12 +25,15 @@
 
 class Bytes: AllStatic {
  public:
-  // Returns true if the byte ordering used by Java is different from
-  // the native byte ordering of the underlying machine. For example,
-  // this is true for Intel x86, but false for Solaris on Sparc.
+  // Returns true if the byte ordering used by Java is different
+  // from the native byte ordering of the underlying machine.
   static inline bool is_Java_byte_ordering_different()
   {
+#ifdef VM_LITTLE_ENDIAN
+    return true;
+#else
     return false;
+#endif
   }
 
   // Efficient reading and writing of unaligned unsigned data in
@@ -132,8 +135,41 @@ class Bytes: AllStatic {
 
 
   // Efficient reading and writing of unaligned unsigned data in Java
-  // byte ordering (i.e. big-endian ordering). No byte-order reversal
-  // is needed since ppc CPUs use big-endian format.
+  // byte ordering (i.e. big-endian ordering).
+#ifdef VM_LITTLE_ENDIAN
+  // Byte-order reversal is needed
+  static inline u2 get_Java_u2(address p)
+  {
+    return swap_u2(get_native_u2(p));
+  }
+  static inline u4 get_Java_u4(address p)
+  {
+    return swap_u4(get_native_u4(p));
+  }
+  static inline u8 get_Java_u8(address p)
+  {
+    return swap_u8(get_native_u8(p));
+  }
+
+  static inline void put_Java_u2(address p, u2 x)
+  {
+    put_native_u2(p, swap_u2(x));
+  }
+  static inline void put_Java_u4(address p, u4 x)
+  {
+    put_native_u4(p, swap_u4(x));
+  }
+  static inline void put_Java_u8(address p, u8 x)
+  {
+    put_native_u8(p, swap_u8(x));
+  }
+
+  // Efficient swapping of byte ordering
+  static inline u2 swap_u2(u2 x);
+  static inline u4 swap_u4(u4 x);
+  static inline u8 swap_u8(u8 x);
+#else
+  // No byte-order reversal is needed
   static inline u2 get_Java_u2(address p)
   {
     return get_native_u2(p);
@@ -164,5 +200,11 @@ class Bytes: AllStatic {
   static inline u2 swap_u2(u2 x) { return x; }
   static inline u4 swap_u4(u4 x) { return x; }
   static inline u8 swap_u8(u8 x) { return x; }
+#endif // VM_LITTLE_ENDIAN
 };
 
+#ifdef VM_LITTLE_ENDIAN
+// The following header contains the implementations of swap_u2,
+// swap_u4, and swap_u8
+#include "incls/_bytes_pd.inline.hpp.incl"
+#endif // VM_LITTLE_ENDIAN
